Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105458

Incorrect primitive position when skin property set to null

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.4.1, 6.5.0 Beta1
    • 6.4.0 Beta2
    • Quick: 3D
    • None
    • Windows
    • 30dc9da5fb (qt/qtquick3d/dev) 30dc9da5fb (qt/tqtc-qtquick3d/dev) 35316e780a (qt/qtquick3d/6.4) 35316e780a (qt/tqtc-qtquick3d/6.4) 35316e780a (qt/qtquick3d/6.4.1) 35316e780a (qt/tqtc-qtquick3d/6.4.1)

    Description

      If skin property of a primitive node is set to some valid Skin node and then set back to null, the primitive node position is incorrect.
      To reproduce:
      1) Run the attached example:
      The Model node position changes every 500ms, but the mesh position is not affected, as it is skinned to some joints located outside of the Model hierarchy.
      2) Press the gray button at the top-left corner of the window
      The skin settings are reset and the skin property is set to null. It is expected that the mesh position should be affected by the timer, which shifts it by 0.1 every 500ms, but it doesn't happen.
      To prove that the problem somewhere in handling of the Skin node set it to null in the code and restart the program. Now the mesh position is affected by the timer.

      It should work even if Skin node is not set to null, as if initially it is set to valid Skin node, but the geometry is not skinned, it works as expected.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            inho Inho Lee
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes