Reset boneData and boneCount when skin disappears

When skin or skeleton disappears, remaining old data can make
unexpected results.

Fixes: QTBUG-105458
Pick-to: 6.4
Change-Id: I8958f42cdccd9715aa9f7c42cb15e41c061fb3e3
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>